# pydantic-deepagents-chutesai

./: .env.example  .gitignore  AGENTS.md  LICENSE  QUICKSTART.md  README.md  code_gen_workflow.py  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: code-review.instructions.md
.github/skills/big-fix/: SKILL.md
.github/skills/docs-only/: SKILL.md
.github/skills/feature-delivery/: SKILL.md
.github/workflows/: copilot-setup-steps.yml
examples/: code_generation.py  docker_sandbox.py  with_review.py  with_subagents.py
skills/code-review/: SKILL.md
